--- a/package.json
+++ b/package.json
@@ -13,23 +13,23 @@
     "build": "cross-env NODE_ENV=production webpack"
   },
   "devDependencies": {
-    "@babel/core": "7.0.0-beta.56",
-    "@babel/plugin-proposal-class-properties": "7.0.0-beta.56",
-    "@babel/plugin-proposal-decorators": "7.0.0-beta.56",
-    "@babel/plugin-proposal-export-namespace-from": "7.0.0-beta.56",
-    "@babel/plugin-proposal-function-sent": "7.0.0-beta.56",
-    "@babel/plugin-proposal-json-strings": "7.0.0-beta.56",
-    "@babel/plugin-proposal-numeric-separator": "7.0.0-beta.56",
-    "@babel/plugin-proposal-throw-expressions": "7.0.0-beta.56",
-    "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.56",
-    "@babel/plugin-syntax-import-meta": "7.0.0-beta.56",
-    "@babel/plugin-transform-runtime": "7.0.0-beta.56",
-    "@babel/polyfill": "7.0.0-beta.56",
-    "@babel/preset-env": "7.0.0-beta.56",
-    "@babel/preset-react": "7.0.0-beta.56",
-    "@babel/register": "7.0.0-beta.56",
-    "@babel/runtime": "7.0.0-beta.56",
-    "babel-core": "7.0.0-beta.3",
+    "@babel/core": "^7.0.0-rc.1",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-rc.1",
+    "@babel/plugin-proposal-decorators": "^7.0.0-rc.1",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0-rc.1",
+    "@babel/plugin-proposal-function-sent": "^7.0.0-rc.1",
+    "@babel/plugin-proposal-json-strings": "^7.0.0-rc.1",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0-rc.1",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0-rc.1",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0-rc.1",
+    "@babel/plugin-syntax-import-meta": "^7.0.0-rc.1",
+    "@babel/plugin-transform-runtime": "^7.0.0-rc.1",
+    "@babel/polyfill": "^7.0.0-rc.1",
+    "@babel/preset-env": "^7.0.0-rc.1",
+    "@babel/preset-react": "^7.0.0-rc.1",
+    "@babel/register": "^7.0.0-rc.1",
+    "@babel/runtime": "^7.0.0-rc.1",
+    "babel-core": "^6.26.3",
     "babel-eslint": "8.2.6",
     "babel-jest": "23.4.2",
     "babel-loader": "8.0.0-beta.2",
