--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,8 @@
     "no-underscore-dangle": 0,
     "import/imports-first": ["error", "absolute-first"],
     "import/newline-after-import": "error",
-    "linebreak-style": 0
+    "linebreak-style": 0,
+    "arrow-body-style": 0,
   },
   "globals": {
     "window": true,
