--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "import/newline-after-import": "error",
     "linebreak-style": 0,
     "arrow-body-style": 0,
+    "react/prefer-stateless-function": 0
   },
   "globals": {
     "window": true,
