--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-hot-loader": "^4.3.4",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
+    "seamless-immutable": "^7.1.3"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-serve --open",
@@ -57,6 +60,7 @@
     "identity-obj-proxy": "3.0.0",
     "jest": "23.4.2",
     "jest-enzyme": "^6.0.2",
+    "json-loader": "^0.5.7",
     "lint-staged": "7.2.0",
     "mini-css-extract-plugin": "0.4.1",
     "node-sass": "4.9.2",
