--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "react-scripts": "1.1.4"
   },
   "scripts": {
-    "start": "webpack-serve --config=webpack/webpack.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --config=webpack/webpack.prod.js"
+    "start": "cross-env NODE_ENV=development webpack-serve --open",
+    "build": "cross-env NODE_ENV=production webpack"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-rc.1",
@@ -51,9 +51,7 @@
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.11.1",
     "eslint-watch": "4.0.2",
-    "extract-loader": "^2.0.1",
     "file-loader": "1.1.11",
-    "html-loader": "^0.5.5",
     "html-webpack-plugin": "3.2.0",
     "husky": "0.14.3",
     "identity-obj-proxy": "3.0.0",
