--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,9 @@
     "import/newline-after-import": "error",
     "linebreak-style": 0,
     "arrow-body-style": 0,
-    "react/prefer-stateless-function": 0
+    "import/no-unresolved": "off",
+    "react/prefer-stateless-function": 0,
+    "react/destructuring-assignment": 0
   },
   "globals": {
     "window": true,
