--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "react-hot-loader": "^4.3.4",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
-    "redux": "^4.0.0",
-    "seamless-immutable": "^7.1.3"
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-serve --open",
