--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-hot-loader": "^4.3.4",
@@ -65,6 +66,7 @@
     "prettier": "^1.14.2",
     "pretty-quick": "1.6.0",
     "sass-loader": "7.1.0",
+    "sass-resources-loader": "^1.3.3",
     "style-loader": "^0.22.0",
     "webpack": "4.16.5",
     "webpack-cli": "3.1.0",
